# SyntheticTableGen

./: .gitignore  README.md  example.py  main.py  pyproject.toml
ignore/: fully_dynamic_schema.py  schemas_old.py
synthetic_table_gen/: EXAMPLE.md  __init__.py  data_lists.py  generators.py  main.py  schemas.py  synthetic_labels.py  utils.py
synthetic_table_gen.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
